update NBs for auto data loading

--- a/day1.ipynb
+++ b/day1.ipynb
@@ -4,15 +4,6 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tools import read"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 58,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -20,13 +11,15 @@
        "1000"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L = read(1, False)\n",
+    "from tools import read, get_input\n",
+    "\n",
+    "L = get_input(1)\n",
     "len(L)"
    ]
   },
@@ -39,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
