--- a/day3.ipynb
+++ b/day3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,20 +11,21 @@
        "140"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from tools import read\n",
-    "L = read(3, False)\n",
+    "from tools import read, get_input\n",
+    "\n",
+    "L = get_input(3)\n",
     "len(L)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,6 @@
     }
    ],
    "source": [
-    "import re\n",
     "s1 = 0\n",
     "s2 = 0\n",
     "M = [list(x) for x in L]\n",
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
