--- a/day5.ipynb
+++ b/day5.ipynb
@@ -11,17 +11,28 @@
      "text": [
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  5976  100  5976    0     0  15450      0 --:--:-- --:--:-- --:--:-- 15441\n",
+      "100  5976  100  5976    0     0  16465      0 --:--:-- --:--:-- --:--:-- 16508\n",
       "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
       "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 10526    0 10526    0     0  28974      0 --:--:-- --:--:-- --:--:-- 28997\n"
+      "100 10452    0 10452    0     0  28385      0 --:--:-- --:--:-- --:--:-- 28325\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(201, 33)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "from tools import read, get_input\n",
     "\n",
-    "L = get_input(5, False)"
+    "data, data_test = get_input(5)\n",
+    "len(data), len(data_test)"
    ]
   },
   {
@@ -54,6 +65,7 @@
     }
    ],
    "source": [
+    "L = data\n",
     "parts = \"\\n\".join(L).split(\"\\n\\n\")\n",
     "seeds = [int(s) for s in parts[0].split(\":\")[1].strip().split()]\n",
     "for section in parts[1:]:\n",
@@ -73,18 +85,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  5976  100  5976    0     0  16155      0 --:--:-- --:--:-- --:--:-- 16151\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -99,13 +99,6 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100 10478    0 10478    0     0  30186      0 --:--:-- --:--:-- --:--:-- 30195\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "46"
@@ -117,7 +110,7 @@
     }
    ],
    "source": [
-    "L = get_input(5, True)\n",
+    "L = data_test\n",
     "parts = \"\\n\".join(L).split(\"\\n\\n\")\n",
     "preseeds = [int(s) for s in parts[0].split(\":\")[1].strip().split()]\n",
     "N = len(preseeds)\n",
@@ -138,41 +131,99 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100  5976  100  5976    0     0  17173      0 --:--:-- --:--:-- --:--:-- 17172\n",
-      "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
-      "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-      "100 10455    0 10455    0     0  30950      0 --:--:-- --:--:-- --:--:-- 31023\n"
+      "[(79, 14), (55, 13)]\n",
+      "seed-to-soil map:\n",
+      "[(81, 14), (57, 13)]\n",
+      "soil-to-fertilizer map:\n",
+      "[(81, 14), (57, 13)]\n",
+      "fertilizer-to-water map:\n",
+      "middle and right (57, 13)\n",
+      "[(81, 14), (57, 13)]\n",
+      "water-to-light map:\n",
+      "[(74, 14), (50, 13)]\n",
+      "light-to-temperature map:\n",
+      "left and middle (74, 14)\n",
+      "middle and right (74, 14)\n",
+      "[(77, 11), (78, 3), (50, 13)]\n",
+      "temperature-to-humidity map:\n",
+      "[(77, 11), (78, 3), (51, 13)]\n",
+      "humidity-to-location map:\n",
+      "left and middle (51, 13)\n",
+      "[(77, 11), (78, 3), (51, 13)]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[(79, 14), (55, 13)]"
+       "51"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L = get_input(5, True)\n",
+    "def pass_range(s, t):\n",
+    "    # a: ystart, b: xstart, c: length\n",
+    "    start, length = s\n",
+    "    end = start+length-1\n",
+    "    a, b, c = t\n",
+    "    xa = b\n",
+    "    xb = b+c-1\n",
+    "    shift = a-b\n",
+    "    if start>xb: # all on the right\n",
+    "        #print(\"right\", s)\n",
+    "        return [s]\n",
+    "    if end<xa: # all on the left\n",
+    "        #print(\"left\", s)\n",
+    "        return [s]\n",
+    "    if start>=xa and end<=xb: # all in the middle\n",
+    "        #print(\"middle\", s)\n",
+    "        return [(start+shift, length)]\n",
+    "    if start<xa: # left and middle (maybe right)\n",
+    "        print(\"left and middle\", s)\n",
+    "        s1 = [(start, xa-start)]\n",
+    "        s2 = pass_range((xa, length-(xa-start)), t)\n",
+    "        return s1 + s2\n",
+    "    if end>xb: # middle and right (maybe left)\n",
+    "        print(\"middle and right\", s)\n",
+    "        s1 = [(xb+1, length-(xb+1-start))]\n",
+    "        s2 = pass_range((start, xb+1-start), t)\n",
+    "        return s1 + s2\n",
+    "\n",
+    "\n",
     "parts = \"\\n\".join(L).split(\"\\n\\n\")\n",
     "preseeds = [int(s) for s in parts[0].split(\":\")[1].strip().split()]\n",
     "N = len(preseeds)\n",
     "seeds= []\n",
     "for i in range(int(N/2)):\n",
     "    seeds += [(preseeds[2*i], preseeds[2*i+1])]\n",
-    "seeds"
+    "print(seeds)\n",
+    "\n",
+    "for section in parts[1:]:\n",
+    "    print(section.split(\"\\n\")[0])\n",
+    "    new_seeds = []\n",
+    "    for i, s in enumerate(seeds):\n",
+    "        list_s = [s]\n",
+    "        for line in section.split(\"\\n\")[1:]:\n",
+    "            t = [int(u) for u in line.split()]\n",
+    "            #print(list_s, t)\n",
+    "            tmp = []\n",
+    "            for u in list_s:\n",
+    "                tmp += pass_range(u, t)\n",
+    "        new_seeds += tmp\n",
+    "    #print(new_seeds)\n",
+    "    seeds = new_seeds\n",
+    "    print(seeds)\n",
+    "min([s[0] for s in seeds])"
    ]
   },
   {
@@ -180,29 +231,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def pass_range(s, t):\n",
-    "    # a: ystart, b: xstart, c: length\n",
-    "    start, length = s\n",
-    "    a, b, c = t\n",
-    "    # only change for values in [ b, b+c [ by shift a-b\n",
-    "    # smallest x is start, largest is start+length-1\n",
-    "    if start>=b+c: # all on the right\n",
-    "        return [s]\n",
-    "    if start+length-1<b: # all on the left\n",
-    "        return [s]\n",
-    "    if start>=b and start+length-1<b+c: # all in the middle\n",
-    "        return [(start+a-b, length)]\n",
-    "    if start<b: # left and middle (maybe right)\n",
-    "        s1 = (start, b-start)\n",
-    "        s2 = pass_range(, t)\n",
-    "        return [s1, s2]\n",
-    "    if start+length-1>=b+c: # middle and right (maybe left)\n",
-    "        s1 = (start, b+c-start)\n",
-    "        s2 = pass_range(, t)\n",
-    "        return [s1, s2]\n",
-    "    "
-   ]
+   "source": []
   }
  ],
  "metadata": {
