--- a/day5.ipynb
+++ b/day5.ipynb
@@ -36,6 +36,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Part 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -80,6 +87,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Part 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -110,6 +124,7 @@
     }
    ],
    "source": [
+    "# simple but not fast enough\n",
     "L = data_test\n",
     "parts = \"\\n\".join(L).split(\"\\n\\n\")\n",
     "preseeds = [int(s) for s in parts[0].split(\":\")[1].strip().split()]\n",
@@ -131,98 +146,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(79, 14), (55, 13)]\n",
       "seed-to-soil map:\n",
-      "[(81, 14), (57, 13)]\n",
       "soil-to-fertilizer map:\n",
-      "[(81, 14), (57, 13)]\n",
       "fertilizer-to-water map:\n",
-      "middle and right (57, 13)\n",
-      "[(81, 14), (57, 13)]\n",
       "water-to-light map:\n",
-      "[(74, 14), (50, 13)]\n",
       "light-to-temperature map:\n",
-      "left and middle (74, 14)\n",
-      "middle and right (74, 14)\n",
-      "[(77, 11), (78, 3), (50, 13)]\n",
       "temperature-to-humidity map:\n",
-      "[(77, 11), (78, 3), (51, 13)]\n",
-      "humidity-to-location map:\n",
-      "left and middle (51, 13)\n",
-      "[(77, 11), (78, 3), (51, 13)]\n"
+      "humidity-to-location map:\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "51"
+       "79874951"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def pass_range(s, t):\n",
+    "def pass_range(s, Lt):\n",
+    "    if len(Lt)==0:\n",
+    "        return [s]\n",
     "    # a: ystart, b: xstart, c: length\n",
     "    start, length = s\n",
     "    end = start+length-1\n",
-    "    a, b, c = t\n",
+    "    a, b, c = Lt[0]\n",
     "    xa = b\n",
     "    xb = b+c-1\n",
     "    shift = a-b\n",
     "    if start>xb: # all on the right\n",
-    "        #print(\"right\", s)\n",
-    "        return [s]\n",
+    "        return pass_range(s, Lt[1:])\n",
     "    if end<xa: # all on the left\n",
-    "        #print(\"left\", s)\n",
-    "        return [s]\n",
+    "        return pass_range(s, Lt[1:])\n",
     "    if start>=xa and end<=xb: # all in the middle\n",
     "        #print(\"middle\", s)\n",
     "        return [(start+shift, length)]\n",
     "    if start<xa: # left and middle (maybe right)\n",
-    "        print(\"left and middle\", s)\n",
-    "        s1 = [(start, xa-start)]\n",
-    "        s2 = pass_range((xa, length-(xa-start)), t)\n",
-    "        return s1 + s2\n",
+    "        #print(\"left and middle\", s)\n",
+    "        return pass_range((xa, length-(xa-start)), Lt) + pass_range((start, xa-start), Lt[1:])\n",
     "    if end>xb: # middle and right (maybe left)\n",
-    "        print(\"middle and right\", s)\n",
-    "        s1 = [(xb+1, length-(xb+1-start))]\n",
-    "        s2 = pass_range((start, xb+1-start), t)\n",
-    "        return s1 + s2\n",
-    "\n",
-    "\n",
+    "        #print(\"middle and right\", s)\n",
+    "        return pass_range((start, xb+1-start), Lt) + pass_range((xb+1, length-(xb+1-start)), Lt[1:])\n",
+    "    \n",
+    "L = data\n",
     "parts = \"\\n\".join(L).split(\"\\n\\n\")\n",
     "preseeds = [int(s) for s in parts[0].split(\":\")[1].strip().split()]\n",
     "N = len(preseeds)\n",
     "seeds= []\n",
     "for i in range(int(N/2)):\n",
     "    seeds += [(preseeds[2*i], preseeds[2*i+1])]\n",
-    "print(seeds)\n",
     "\n",
     "for section in parts[1:]:\n",
-    "    print(section.split(\"\\n\")[0])\n",
+    "    #print(section.split(\"\\n\")[0])\n",
     "    new_seeds = []\n",
     "    for i, s in enumerate(seeds):\n",
-    "        list_s = [s]\n",
-    "        for line in section.split(\"\\n\")[1:]:\n",
-    "            t = [int(u) for u in line.split()]\n",
-    "            #print(list_s, t)\n",
-    "            tmp = []\n",
-    "            for u in list_s:\n",
-    "                tmp += pass_range(u, t)\n",
-    "        new_seeds += tmp\n",
-    "    #print(new_seeds)\n",
+    "        lines = section.split(\"\\n\")[1:]\n",
+    "        Lt = [[int(u) for u in line.split()] for line in lines]\n",
+    "        #print(s, Lt)\n",
+    "        new_seeds += pass_range(s, Lt)\n",
     "    seeds = new_seeds\n",
-    "    print(seeds)\n",
+    "    #print(seeds)\n",
     "min([s[0] for s in seeds])"
    ]
   },
