--- a/day17.ipynb
+++ b/day17.ipynb
@@ -70,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "102"
+       "105"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -87,8 +87,8 @@
    "source": [
     "start = (0, 0)\n",
     "cost = {(i, j): 99999 for i in range(Nrows) for j in range(Ncols)}\n",
-    "prev_directions = {(i, j): [] for i in range(Nrows) for j in range(Ncols)}\n",
-    "\n",
+    "prev_direction = {(i, j): (4,4)  for i in range(Nrows) for j in range(Ncols)}\n",
+    "# index of the direction and nbr of moves since last turn\n",
     "def dijkstra(start, cost):\n",
     "    q = []\n",
     "    cost[start] = 0 \n",
@@ -98,21 +98,63 @@
     "        if cost[pos] != c:\n",
     "            continue #already found a better path for n\n",
     "        directions = [(1, 0), (-1, 0), (0, 1), (0, -1)]\n",
-    "        for dir in directions:\n",
+    "        for kdir, dir in enumerate(directions):\n",
     "            next_pos = (pos[0]+dir[0], pos[1]+dir[1])\n",
     "            if next_pos[0] < 0 or next_pos[0] >= Nrows:\n",
     "                continue\n",
     "            if next_pos[1] < 0 or next_pos[1] >= Ncols:\n",
     "                continue\n",
-    "            if sum([d == dir for d in prev_directions[pos]]) == 3:\n",
+    "            if kdir == prev_direction[pos][0] and prev_direction[pos][1]==3:\n",
     "                continue\n",
     "            val = int(L[next_pos[0]][next_pos[1]])\n",
     "            if(cost[next_pos] > (c+val)):\n",
     "                cost[next_pos] = c+val\n",
-    "                prev_directions[next_pos] = prev_directions[pos][-2:] + [dir]\n",
+    "                if kdir == prev_direction[pos][0]:\n",
+    "                    prev_direction[next_pos] = kdir, prev_direction[pos][1]+1\n",
+    "                else:\n",
+    "                    prev_direction[next_pos] = kdir, 1\n",
     "                q.append((next_pos,c+val))\n",
     "dijkstra(start, cost)\n",
-    "cost[(Nrows-1, Ncols-1)] - int(L[Nrows-1][Ncols-1])\n"
+    "cost[(Nrows-1, Ncols-1)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4>>>^>>>>>^^> 4123112333111\n",
+      "v>v>>>>vvv>>> 1111233111123\n",
+      "vvvvv>>>vv>>v 2121112322121\n",
+      "vvv>vvv>vvv>v 3231211133112\n",
+      "vv>>v>v>><vvv 2312312121213\n",
+      "v>v>>vvvv<vv> 3111213111321\n",
+      "<vv>>v>vvvvvv 1121221221131\n",
+      "vvv>>>vvvvv<v 1231231332212\n",
+      "vvvv>>>>>vvvv 2331123123313\n",
+      "v><v>>>vvv<v> 3112123111121\n",
+      "<v>v>>>>>vvvv 1113123332131\n",
+      "vvvvv>>>^^v<v 1213112311212\n",
+      "vvv>>>>>>>vvv 2321231233313\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, line in enumerate(L):\n",
+    "    for j, val in enumerate(line):\n",
+    "        if (i,j) in prev_direction.keys():\n",
+    "            val = str(prev_direction[(i,j)][0]).replace('0', 'v').replace('1', '^').replace('2', '>').replace('3', '<')\n",
+    "        print(val, end='')\n",
+    "    print(\" \", end='')\n",
+    "    for j, val in enumerate(line):\n",
+    "        if (i,j) in prev_direction.keys():\n",
+    "            val = str(prev_direction[(i,j)][1])\n",
+    "        print(val, end='')\n",
+    "    print()"
    ]
   },
   {
