improve part 1 of day18

--- a/day18.ipynb
+++ b/day18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "(676, 14)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -47,28 +47,35 @@
     }
    ],
    "source": [
+    "L = data\n",
+    "\n",
     "pos = (0, 0)\n",
     "points = {pos}\n",
+    "corners = {}\n",
+    "last_dir = int(L[-1].split()[0].replace('R', '0').replace('L', '2').replace('U', '3').replace('D', '1'))\n",
     "\n",
-    "for line in data:\n",
+    "for line in L:\n",
     "    dir, n, c = line.split()\n",
+    "    dir = int(dir.replace('R', '0').replace('L', '2').replace('U', '3').replace('D', '1'))\n",
+    "    corners[pos] = (last_dir, dir)\n",
     "    n = int(n)\n",
-    "    if dir=='R':\n",
+    "    if dir==0:       \n",
     "        for i in range(1, n+1):\n",
     "            pos = (pos[0], pos[1]+1)\n",
     "            points.add(pos)\n",
-    "    elif dir=='L':\n",
+    "    elif dir==2:\n",
     "        for i in range(1, n+1):\n",
     "            pos = (pos[0], pos[1]-1)\n",
     "            points.add(pos)\n",
-    "    elif dir=='U':\n",
+    "    elif dir==3:\n",
     "        for i in range(1, n+1):\n",
     "            pos = (pos[0]-1, pos[1])\n",
     "            points.add(pos)\n",
-    "    elif dir=='D':\n",
+    "    elif dir==1:\n",
     "        for i in range(1, n+1):\n",
     "            pos = (pos[0]+1, pos[1])\n",
     "            points.add(pos)\n",
+    "    last_dir = dir\n",
     "print(len(points))\n",
     "\n",
     "i0, j0 = int(sum([p[0] for p in points]) / len(points)), int(sum([p[1] for p in points]) / len(points))\n",
@@ -82,7 +89,69 @@
     "        if (p not in pints) and (p not in points) and (p not in q):\n",
     "            q.append(p)\n",
     "print(len(pints))\n",
-    "print(len(points)+len(pints))\n"
+    "print(len(points)+len(pints))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46394"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "S = 0\n",
+    "set_i = set([p[0] for p in points])\n",
+    "for k, i in enumerate(set_i):\n",
+    "    vj = np.array(sorted([p[1] for p in points if p[0]==i]))\n",
+    "    # true if a new segment starts at this point\n",
+    "    starts = np.zeros(len(vj))\n",
+    "    starts[0] = True\n",
+    "    starts[1:] = np.diff(vj)>1\n",
+    "    # true if a segment ends at this point\n",
+    "    ends = np.zeros(len(vj))\n",
+    "    ends[-1] = True\n",
+    "    ends[:-1] = np.diff(vj)>1\n",
+    "    within = False\n",
+    "    ind_start = None\n",
+    "    # find the indices of the starts and ends\n",
+    "    k_starts = np.where(starts)[0]\n",
+    "    k_ends = np.where(ends)[0]\n",
+    "    if sum(starts)!=sum(ends):\n",
+    "        print('errorf for i=', i, 'vj=', vj, 'starts=', starts, 'ends=', ends)\n",
+    "    for k1, k2 in zip(k_starts, k_ends):\n",
+    "        if k1==k2:\n",
+    "            if within:\n",
+    "                S += vj[k1] - ind_start + 1\n",
+    "            else:\n",
+    "                ind_start = vj[k1]\n",
+    "            within = not within\n",
+    "        elif k1<k2:\n",
+    "            c1 = corners[(i, vj[k1])]\n",
+    "            c2 = corners[(i, vj[k2])]\n",
+    "            turn1 = (c1[1]-c1[0]) % 4\n",
+    "            turn2 = (c2[1]-c2[0]) % 4\n",
+    "            if turn1==turn2:\n",
+    "                if not within:\n",
+    "                    S += vj[k2] - vj[k1] + 1\n",
+    "            else:\n",
+    "                if within:\n",
+    "                    S += vj[k2] - ind_start + 1\n",
+    "                else:\n",
+    "                    ind_start = vj[k1]\n",
+    "                within = not within\n",
+    "        else:\n",
+    "            print('error for i=', i, 'vj=', vj, 'starts=', starts, 'ends=', ends)\n",
+    "S"
    ]
   },
   {
@@ -121,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [
     {
@@ -153,6 +222,119 @@
     "    dir = c[-2]\n",
     "    print(c, d, dir)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6405262\n"
+     ]
+    }
+   ],
+   "source": [
+    "L = data_test\n",
+    "\n",
+    "pos = (0, 0)\n",
+    "points = {pos}\n",
+    "corners = {}\n",
+    "last_dir = int(L[-1].split()[-1][-2])\n",
+    "\n",
+    "for line in data_test:\n",
+    "    dir, n, c = line.split()\n",
+    "    d = int(c[2:-2], base=16)\n",
+    "    dir = int(c[-2])\n",
+    "    corners[pos] = (last_dir, dir)\n",
+    "    if dir==0:\n",
+    "        for i in range(1, d+1):\n",
+    "            pos = (pos[0], pos[1]+1)\n",
+    "            points.add(pos)\n",
+    "    elif dir==2:\n",
+    "        for i in range(1, d+1):\n",
+    "            pos = (pos[0], pos[1]-1)\n",
+    "            points.add(pos)\n",
+    "    elif dir==3:\n",
+    "        for i in range(1, d+1):\n",
+    "            pos = (pos[0]-1, pos[1])\n",
+    "            points.add(pos)\n",
+    "    elif dir==1:\n",
+    "        for i in range(1, d+1):\n",
+    "            pos = (pos[0]+1, pos[1])\n",
+    "            points.add(pos)\n",
+    "    last_dir = dir\n",
+    "print(len(points))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "S = 0\n",
+    "set_i = set([p[0] for p in points])\n",
+    "for k, i in enumerate(set_i):\n",
+    "    vj = np.array(sorted([p[1] for p in points if p[0]==i]))\n",
+    "    # true if a new segment starts at this point\n",
+    "    starts = np.zeros(len(vj))\n",
+    "    starts[0] = True\n",
+    "    starts[1:] = np.diff(vj)>1\n",
+    "    # true if a segment ends at this point\n",
+    "    ends = np.zeros(len(vj))\n",
+    "    ends[-1] = True\n",
+    "    ends[:-1] = np.diff(vj)>1\n",
+    "    within = False\n",
+    "    ind_start = None\n",
+    "    # find the indices of the starts and ends\n",
+    "    k_starts = np.where(starts)[0]\n",
+    "    k_ends = np.where(ends)[0]\n",
+    "    if sum(starts)!=sum(ends):\n",
+    "        print('errorf for i=', i, 'vj=', vj, 'starts=', starts, 'ends=', ends)\n",
+    "    for k1, k2 in zip(k_starts, k_ends):\n",
+    "        if k1==k2:\n",
+    "            if within:\n",
+    "                S += vj[k1] - ind_start + 1\n",
+    "            else:\n",
+    "                ind_start = vj[k1]\n",
+    "            within = not within\n",
+    "        elif k1<k2:\n",
+    "            c1 = corners[(i, vj[k1])]\n",
+    "            c2 = corners[(i, vj[k2])]\n",
+    "            turn1 = (c1[1]-c1[0]) % 4\n",
+    "            turn2 = (c2[1]-c2[0]) % 4\n",
+    "            if turn1==turn2:\n",
+    "                if not within:\n",
+    "                    S += vj[k2] - vj[k1] + 1\n",
+    "            else:\n",
+    "                if within:\n",
+    "                    S += vj[k2] - ind_start + 1\n",
+    "                else:\n",
+    "                    ind_start = vj[k1]\n",
+    "                within = not within\n",
+    "        else:\n",
+    "            print('error for i=', i, 'vj=', vj, 'starts=', starts, 'ends=', ends)\n",
+    "S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
