--- a/day18.ipynb
+++ b/day18.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "(676, 14)"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,12 +220,56 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 1.3 Green theorem"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "46394"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "L = data\n",
+    "x = 0\n",
+    "S = 0\n",
+    "for line in L:\n",
+    "    sdir, n, _ = line.split()\n",
+    "    n = int(n)\n",
+    "    if sdir == 'R':\n",
+    "        dir = (0, 1)\n",
+    "    elif sdir == 'L':\n",
+    "        dir = (0, -1)\n",
+    "    elif sdir == 'U':\n",
+    "        dir = (-1, 0)\n",
+    "    elif sdir == 'D':\n",
+    "        dir = (1, 0)\n",
+    "    x += n * dir[1]\n",
+    "    S += n * dir[0] * x + n/2\n",
+    "S += 1\n",
+    "int(S)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Part 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,33 +285,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(6405262, 14)"
+       "201398068194715"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "L = transform(data_test)\n",
+    "L = transform(data)\n",
     "\n",
-    "points, corners = get_border_corners(L, intdir=True)\n",
-    "len(points), len(corners)"
+    "x = 0\n",
+    "S = 0\n",
+    "\n",
+    "for line in L:\n",
+    "    sdir, n, _ = line.split()\n",
+    "    sdir, n = int(sdir), int(n)\n",
+    "    if sdir == 0:\n",
+    "        dir = (0, 1)\n",
+    "    elif sdir == 2:\n",
+    "        dir = (0, -1)\n",
+    "    elif sdir == 3:\n",
+    "        dir = (-1, 0)\n",
+    "    elif sdir == 1:\n",
+    "        dir = (1, 0)\n",
+    "    x += n * dir[1]\n",
+    "    S += n * dir[0] * x + n/2\n",
+    "S += 1\n",
+    "int(S)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
